# guidance-board

./: .gitignore  CMakeLists.txt  Readme  compile_commands.json  platformio.ini  plt.csv  readme2  readme3  run_all.sh
mock/: main.cpp  print.cpp
mock/firmware/: guidance_board.cpp  pwm.cpp
src/: .main.cpp.swp  adc_config.h  adc_isr.cpp  adc_isr.h  assert_err.cpp  control.cpp  defaults.h  feedthrough_mosfet.h  handle_heartbeat.cpp  main.cpp  precharge_mosfet.h  pwm_brake.h  pwm_config.h  sdc_brake.h  xbar_config.h
src/can/: can.cpp  can.hpp
src/canzero/: canzero.cpp  canzero.h
src/firmware/: control_transition.cpp  control_transition.hpp  guidance_board.cpp  guidance_board.h  magnet_pwm.h  magnet_pwm.hpp  pinout.h  pinout.hpp  pwm.cpp  pwm.h  pwm.hpp  xbar.cpp  xbar.hpp
src/fsm/: control_state.cpp  error_handling.cpp  error_handling.h  error_handling.hpp  fsm.cpp  idle_state.cpp  init_state.cpp  precharge_state.cpp  ready_state.cpp  start_state.cpp  states.h  states.hpp  stop_state.cpp
src/fsm/states/: arming45.cpp  control.cpp  disarming45.cpp  idle.cpp  init.cpp  precharge.cpp  ready.cpp
src/sensors/: airgaps.cpp  airgaps.h  input_current.cpp  input_current.h  magnet_current.cpp  magnet_current.h  magnet_temperatures.cpp  magnet_temperatures.h  mcu_temperature.cpp  vdc.cpp  vdc.h
src/sensors/formula/: current_sense.h  displacement420.h  isolated_voltage.h
src/util/: csv.h  ema.h  interval.hpp  metrics.h  ntc_eq.h  ntc_eq.hpp  periodic_scheduler.h  pool_allocator.h  timestamp.h  timestamp.hpp  timimg.h  timimg.hpp  trapazoidal_integral.h
